k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: laravel-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: laravel

  template:
    metadata:
      labels:
        app: laravel

    spec:
      containers:

        - name: laravel
          image: jawadahmad68/done:latest
          ports:
            - containerPort: 9000

        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
