k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-prod

spec:
  selector:
    app: laravel

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
